# rs_polymarket_hypersync

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE.md  dprint.json  justfile  opencode.json  production-hardening.md
.github/workflows/: ci.yml
_dev/: notes.md  polymarket-indexer.md  sample.md
abis/: ConditionalTokens.json  ERC20.json  ERC20Detailed.json  Exchange.json  FeeModule.json  FixedProductMarketMaker.json  NegRiskAdapter.json  ProxyWalletFactory.json  RelayHub.json  SafeProxyFactory.json  UmaSportsOracle.json
src/: config.rs  contracts.rs  enrich.rs  exchange.rs  main.rs  matcher.rs  storage.rs
