[package]
name = "rs_polymarket_hypersync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
duckdb = { version = "1.4.2", features = ["bundled"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
http-body-util = "0.1.3"
hypersync-client = "1.0.1"
hyper = "1.8.1"
hyper-util = "0.1.20"
native-tls = "0.2.14"
num-bigint = "0.4.6"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-native-tls = "0.3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
