[package]
name = "rs_polymarket_hypersync"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

# This manifest is intentionally annotated by subsystem so maintainers and
# coding agents can quickly map crates to runtime responsibilities.
[dependencies]
# Error handling and environment bootstrapping
anyhow = "1.0.102"
dotenvy = "0.15.7"

# Storage and analytics output
duckdb = { version = "1.4.2", features = ["bundled"] }

# HyperSync ingestion
hypersync-client = "1.0.1"

# RTDS/WebSocket transport and HTTP stack
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = "0.1.20"

# TLS and integrity helpers
native-tls = "0.2.14"
sha2 = "0.10.9"
tokio-native-tls = "0.3.1"

# Data decoding, API clients, and async runtime
num-bigint = "0.4.6"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
time = { version = "0.3.44", features = ["formatting"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
